test/zinc_source/compile_errors/functions/03_duplicate_named_arg.zn
// expected-error: spread expects a struct value
fn add(x, y) {
    return x + y
}

fn main() {
    add(..1)
}
